--- a/site/www/host.config.json
+++ b/site/www/host.config.json
@@ -10,7 +10,7 @@
           },
           {
             "name": "Link",
-            "value": "</build/app/6bo0uds8.js>;rel=preload;as=script"
+            "value": "</build/app/5e0knrv8.js>;rel=preload;as=script"
           },
           {
             "name": "Link",
