--- a/electron/package.json
+++ b/electron/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "docs": "cd ../site && gulp && cd ../core && ./node_modules/.bin/typedoc --exclude **/__test__/*.ts --json dist/docs.json --mode modules src/core-plugin-definitions.ts && node scripts/docs.js",
-    "build": "npm run clean && npm run transpile && npm run rollup && npm run minify",
+    "build": "npm run clean && npm run transpile",
     "clean": "rimraf dist",
     "minify": "uglifyjs --mangle --compress --source-map \"content='dist/capacitor.js.map',url='capacitor.js.map'\" --comments '/^/*!/' --output dist/capacitor.js dist/capacitor.js",
     "prepublishOnly": "npm run build",
@@ -21,8 +21,8 @@
     "transpile-no-helpers": "tsc --module ES2015 --target ES5 --noEmitHelpers true --outDir dist/esm",
     "test": "jest"
   },
-  "main": "dist/esm/electron/src/index.js",
-  "typings": "dist/esm/electron/src/index.d.ts",
+  "main": "dist/esm/index.js",
+  "typings": "dist/esm/index.d.ts",
   "devDependencies": {
     "@ionic/core": "0.0.2-59",
     "@ionic/pwa-elements": "0.0.9",
