--- a/android-template/build.gradle
+++ b/android-template/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+apply from: "dependencies.gradle"
+
 buildscript {
     
     repositories {
