--- a/android/capacitor/gradle/wrapper/gradle-wrapper.properties
+++ b/android/capacitor/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Dec 01 12:41:00 CST 2017
+#Wed Aug 08 10:38:40 CEST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
