refactor(): rename version property to capacitorVersion is more accurate that way

--- a/android/capacitor/build.gradle
+++ b/android/capacitor/build.gradle
@@ -62,7 +62,7 @@ dependencies {
 // ### Prepare publishing ###
 // ##########################
 
-project.version = (project.hasProperty('bintrayVersion') ? bintrayVersion : project.version)
+project.version = (project.hasProperty('capacitorVersion') ? capacitorVersion : project.version)
 
 // ###################################
 // ### Publish to local maven repo ###
@@ -105,7 +105,7 @@ publishing {
 // ### Publish to bintray ###
 // ##########################
 
-// ./gradlew clean build bintrayUpload -PbintrayUser=$BINTRAY_USER -PbintrayKey=$BINTRAY_KEY -PbintrayVersion=$LERNA_VERSION -PdryRun=true
+// ./gradlew clean build bintrayUpload -PbintrayUser=$BINTRAY_USER -PbintrayKey=$BINTRAY_KEY -PcapacitorVersion=$LERNA_VERSION -PdryRun=true
 
 // for publishToMavenLocal to work we have to use bintray's gradle plugin instead of novoda
 bintray {
