--- a/android/capacitor/gradle.properties
+++ b/android/capacitor/gradle.properties
@@ -2,5 +2,5 @@
 group=com.ionicframework.capacitor
 #group=ionic-team
 artifactId=capacitor-android
-#version param comes from outside "./gradlew publishToMavenLocal -PbintrayVersion=1.0.0-beta.x"
+#version param comes from outside "./gradlew publishToMavenLocal -PcapacitorVersion=1.0.0-beta.x"
 #version=1.0.0-beta.6
