--- a/core/package.json
+++ b/core/package.json
@@ -26,6 +26,7 @@
     "@ionic/core": "0.0.2-59",
     "@ionic/pwa-elements": "0.0.14",
     "@types/jest": "^21.1.8",
+    "@types/filesystem": "0.0.29",
     "jest": "^22.0.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.52.0",
