--- a/android/capacitor/build.gradle
+++ b/android/capacitor/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'org.apache.cordova:framework:7.0.0'
+    implementation project.properties['capacitorXWalkModule'] ?: 'org.xwalk:xwalk_shared_library:23.53.589.4'
 }
 
 def version = System.getenv("BINTRAY_PKG_VERSION")
